# rusty-graph

./: .codecov.yml  .editorconfig  .gitignore  ARCHITECTURE.md  AUDIT_0.8.0.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CYPHER.md  Cargo.toml  FLUENT.md  Makefile  README.md  TODO.md  backlog.md  describe-design.md  design_document.md  development_todos.md  kglite.pyi  mypy_stubtest.ini  pyproject.toml  refactor_findings.md  rusty_graph.pyi  stubtest_allowlist.txt  test_file  todo.md  user-feedback.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: benchmarks.yml  build_wheels.yml  ci.yml
baselines/: after_bottlenecks.txt  after_cypher.txt  after_timeseries.txt  before_bottlenecks.txt  before_cypher.txt  before_spatial.txt  before_timeseries.txt  phase2_after_bottlenecks.txt  phase2_after_cypher.txt
bench/: api_benchmark.py  bench_cohort_cold.py  bench_save_subset.py  benchmark_compatibility.py  benchmark_cypher_scalability.py  benchmark_wikidata_cypher.py  ingest_baseline.csv  sodir_graph_config.json  wiki_benchmark.csv  wiki_benchmark.py
benchmarks/: bench_algorithms_quick.py  bench_graph_traversal.py  benchmark_describe.py  benchmark_legal_graph.py  benchmark_storage_modes.py  benchmark_wikidata_describe.py  phase0_baseline.md  phase1_interning.md  phase2_slotvec.md  phase3_edge_opt.md
crates/kglite-mcp-server/: Cargo.toml
crates/kglite-mcp-server/src/: code_source.rs  csv_http.rs  cypher_tools.rs  main.rs  tools.rs
dev-documentation/: disk-mode-iterative-updates.md
dev/bench/: data.js
docs/: adding-a-query-language.md  adding-a-storage-backend.md  conf.py  core-concepts.md  getting-started.md  index.md  requirements.txt
docs/examples/: manifest_cypher_preprocessor.md  manifest_cypher_tool.md  manifest_with_embedder.md  manifest_workspace.md
docs/explanation/: architecture.md  design-decisions.md
docs/guides/: ai-agents.md  code-tree.md  cypher.md  data-loading.md  datasets.md  graph-algorithms.md  import-export.md  index.md  mcp-servers.md  querying.md  recipes.md  rules.md  semantic-search.md  spatial.md  timeseries.md  traversal-hierarchy.md
docs/migrations/: mcp-0.6-to-0.9.md  mcp-pre-0.9.20.md
docs/reference/: cypher-reference.md  fluent-api.md
examples/: build_code_graph.py  build_graph.py  code_graph.py  conference_graph_mcp.yaml  legal_graph.py  mcp_server.py  open_source_workspace_mcp.yaml  spatial_graph.py  wikidata_disk.py
kglite/: __init__.py  __init__.pyi  _cli.py  mcp_server.py  neo4j_export.py  progress.py
kglite/blueprint/: __init__.py  loader.py
kglite/code_tree/: __init__.py  builder.py  repo.py
kglite/datasets/: __init__.py  wikidata.py
kglite/mcp_server/: __init__.py  __main__.py  (+17 more)
pytest/: add_nodes_test.py  loadTest.py  students.py  test.py
scripts/: cypher_pass_bisect.py
src/: data_types.rs  graph.rs  lib.rs  mcp_tools.rs  node.rs  relation.rs  schema.rs  utils.rs
src - Copy/: data_types.rs.txt  graph - add_relationships.rs.txt  graph.rs.txt
tests/: bench_spatial.py  benchmark_csr_build.py  benchmark_phase3_ranking.py  benchmark_storage_modes.py  benchmark_wikidata_disk.py  conftest.py  parity_baseline_phase_10.json  parity_baseline_phase_11.json  test_aggregation_perf.py  test_aliases.py  test_auto_vacuum.py  test_batch_operations.py  test_blueprint.py  test_bugfix_v0411.py  test_bugfixes_v0584.py  test_calculations.py  test_chunked_column_builder.py  test_clustering.py  test_code_tree_annotations.py  test_code_tree_calls.py  test_code_tree_complexity.py  test_code_tree_cpp_macros.py  test_code_tree_deep_expr.py  test_code_tree_is_test.py  test_code_tree_manifest.py  test_code_tree_metadata_columns.py  test_code_tree_module_contains.py  test_code_tree_parameters.py  test_code_tree_procedures.py  test_code_tree_pyi.py  test_code_tree_pyo3_binds.py  test_code_tree_references.py  test_code_tree_resolution.py  test_code_tree_skip.py  test_code_tree_uses_type_position.py  test_columnar_storage.py  test_community_detection.py  test_concurrency.py  test_connection_aggregation.py  test_connections.py  (+99 more)
wheels/: rusty_graph-0.1.0-cp312-none-win_amd64.whl  rusty_graph-0.1.1-cp312-none-win_amd64.whl  rusty_graph-0.1.10-cp312-none-win_amd64.whl  rusty_graph-0.1.11-cp312-none-win_amd64.whl  rusty_graph-0.1.12-cp312-none-win_amd64.whl  rusty_graph-0.1.13-cp312-cp312-win_amd64.whl  rusty_graph-0.1.14-cp312-cp312-win_amd64.whl  rusty_graph-0.1.15-cp312-cp312-win_amd64.whl  rusty_graph-0.1.16-cp312-cp312-win_amd64.whl  rusty_graph-0.1.17-cp312-cp312-win_amd64.whl  rusty_graph-0.1.18-cp312-cp312-win_amd64.whl  rusty_graph-0.1.19-cp312-cp312-win_amd64.whl  rusty_graph-0.1.2-cp312-none-win_amd64.whl  rusty_graph-0.1.20-cp312-cp312-win_amd64.whl  rusty_graph-0.1.21-cp312-cp312-win_amd64.whl  rusty_graph-0.1.22-cp312-cp312-win_amd64.whl  rusty_graph-0.1.23-cp312-cp312-win_amd64.whl  rusty_graph-0.1.24-cp312-cp312-win_amd64.whl  rusty_graph-0.1.25-cp312-cp312-win_amd64.whl  rusty_graph-0.1.26-cp312-cp312-win_amd64.whl  rusty_graph-0.1.27-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.28-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.29-cp312-cp312-win_amd64.whl  rusty_graph-0.1.3-cp312-none-win_amd64.whl  rusty_graph-0.1.30-cp312-cp312-win_amd64.whl  rusty_graph-0.1.31-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.32-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.34-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.35-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.37-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.38-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.39-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.4-cp312-none-win_amd64.whl  rusty_graph-0.1.40-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.41-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.42-cp312-cp312-macosx_11_0_arm64.whl  rusty_graph-0.1.42-cp312-cp312-win_amd64.whl  rusty_graph-0.1.43-cp312-cp312-win_amd64.whl  rusty_graph-0.1.44-cp312-cp312-win_amd64.whl  rusty_graph-0.1.45-cp312-cp312-win_amd64.whl  (+47 more)
(+349 files in other folders)
