[package]
name = "kglite"
version = "0.8.5"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
description = "A high-performance graph database with Python bindings written in Rust."
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
license = "MIT"

[lib]
name = "kglite"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["multiple-pymethods", "abi3-py310"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
chrono = { version = "0.4.43", features = ["serde"] }
geo = "0.33"
rstar = "0.12"
wkt = "0.14"
regex = "1"
rayon = "1.10"
flate2 = "1"
zstd = "0.13"
memmap2 = "0.9"
bzip2 = "0.6"
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
toml = "1.1.2"
roxmltree = "0.21.1"
walkdir = "2.5.0"
tempfile = "3"
aho-corasick = "1.1.4"
csv = "1.3"
geojson = "0.24"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
