[package]
name = "kglite"
version = "0.9.6"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
description = "A high-performance graph database with Python bindings written in Rust."
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
license = "MIT"

[lib]
name = "kglite"
crate-type = ["cdylib", "rlib"]
# Disable rustdoc's auto-compilation of code blocks. The user-facing
# `/// Example::` blocks throughout `src/graph/pyapi/*.rs` are Python
# snippets rendered by Sphinx for the published Python API docs — they're
# never valid Rust, so rustdoc's default doctest harness fails on every
# single-quoted string. There's no Rust API surface that needs doctest
# coverage here either; the `#[pyclass]` types are exercised through
# Python tests.
doctest = false

# Standalone perf microbench for the bz2 decoder. Run with
# `cargo run --bin bz2_bench --release -- <path>`.
[[bin]]
name = "bz2_bench"
path = "src/bin/bz2_bench.rs"
required-features = []

[dependencies]
pyo3 = { version = "0.28", features = ["multiple-pymethods", "abi3-py310"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
chrono = { version = "0.4.43", features = ["serde"] }
geo = "0.33"
rstar = "0.12"
wkt = "0.14"
regex = "1"
rayon = "1.10"
flate2 = "1"
zstd = "0.13"
memmap2 = "0.9"
bzip2 = "0.6"
# Pinned to git HEAD because crates.io 0.1.2 ships an older Cargo.toml
# without the `rayon` feature flag (the feature exists on the v0.1.2 tag
# itself but not in the published tarball). Drop the git dep and switch
# to a regular version pin once 0.1.3+ is released.
bzip2-rs = { git = "https://github.com/paolobarbolini/bzip2-rs", rev = "2be7684b444987d6cc7b0b226bda7581be739e3c", features = ["rayon"] }
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
toml = "1.1.2"
roxmltree = "0.21.1"
walkdir = "2.5.0"
tempfile = "3"
aho-corasick = "1.1.4"
memchr = "2"
rustc-hash = "2"
mimalloc = { version = "0.1", default-features = false }
csv = "1.3"
geojson = "0.24"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Same codegen as release but keeps line tables + symbols so samply /
# `cargo flamegraph` / Instruments can attribute hot frames. Use with
# `maturin develop --profile profiling` for Python-driven profiling, or
# `cargo build --profile profiling --bin bz2_bench` for native binaries.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
