[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kglite"
description = "A high-performance graph database library with Python bindings written in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com"}
]
keywords = ["graph", "database", "knowledge-graph", "rust", "high-performance", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5",
]
dynamic = ["version"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# Embedder factory deps (BAAI/bge-m3-style semantic search via
# `text_score()` in Cypher). Install with `pip install kglite[embeddings]`
# to get torch + sentence-transformers in the same Python the
# kglite-mcp-server binary will use at runtime.
embeddings = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
]

# `pip install kglite` → `kglite-mcp-server` on PATH. The entry point
# resolves to a Python launcher (`kglite._cli:main`) which execs the
# native Rust binary bundled under `kglite/_bin/kglite-mcp-server`.
# The native binary is built by the wheel-build workflow (cargo build
# --release --bin kglite-mcp-server) and copied into this directory
# before maturin packages the Python tree. Pattern cribbed from
# mcp-methods 0.3.25.
[project.scripts]
kglite-mcp-server = "kglite._cli:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"
Documentation = "https://kglite.readthedocs.io"
Changelog = "https://github.com/kkollsga/kglite/blob/main/CHANGELOG.md"
Issues = "https://github.com/kkollsga/kglite/issues"

[tool.maturin]
# extension-module must be added via maturin features (not Cargo.toml default)
# so `cargo test` can still link. abi3-py310 is in Cargo.toml since it affects
# symbol visibility even outside maturin builds.
features = ["python-extension"]
python-source = "."

# Force-include the bundled `kglite-mcp-server` binary into the wheel.
# Lives under `kglite/_bin/` after the wheel-build workflow's
# "build + copy binary" step (or `make bundle-bin` locally). The path
# is `.gitignore`d (would pollute git with platform-specific outputs),
# and maturin would skip ignored files by default — this override
# tells it the file is part of the wheel. POSIX builds package
# `kglite-mcp-server`; Windows packages `kglite-mcp-server.exe`. Only
# one exists per platform, but listing both keeps the config
# platform-agnostic.
include = [
    { path = "kglite/_bin/kglite-mcp-server", format = "wheel" },
    { path = "kglite/_bin/kglite-mcp-server.exe", format = "wheel" },
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["kglite"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kglite"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m not benchmark')",
    "slow: slow tests taking >5s (deselect with '-m not slow')",
    "parity: cross-storage-mode oracle tests (memory vs mapped vs disk)",
    "stress: opt-in stress tests (30GB mapped, 10k-hop) — select with '-m stress'",
    "differential: cypher optimizer differential tests (optimized vs. naive)",
]
addopts = "-m 'not benchmark and not parity and not stress'"

[tool.mypy]
ignore_missing_imports = true
exclude = "kglite/blueprint/"

[[tool.mypy.overrides]]
module = ["kglite.blueprint.*"]
ignore_errors = true

[tool.coverage.run]
source = ["kglite"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover", "raise NotImplementedError"]
