[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kglite"
description = "A high-performance graph database library with Python bindings written in Rust"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com"}
]
keywords = ["graph", "database", "knowledge-graph", "rust", "high-performance", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5",
]
dynamic = ["version"]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
# Deps for `kglite-mcp-server` and the manifest-driven server tools.
# Install with `pip install 'kglite[mcp]'`. 0.9.20+: the server is a
# Python entry point (no bundled binary) so these are the only runtime
# deps it pulls. fastembed handles `extensions.embedder` (same ONNX
# backend as the 0.9.18/0.9.19 Rust fastembed-rs path, same
# `~/.cache/fastembed/` cache). aiohttp powers `extensions.csv_http_server`.
mcp = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "fastembed>=0.4",
    "aiohttp>=3.9",
    "watchdog>=4.0",
]

# `pip install kglite` → `kglite-mcp-server` on PATH. 0.9.20+: the
# entry point resolves to the Python implementation under
# `kglite.mcp_server.server:main`. Pre-0.9.20 this pointed at a
# launcher that exec'd a bundled Rust binary — that approach was
# retired because it forced a per-Python-version wheel matrix (no
# abi3 escape for binaries linking pyo3). The Python entry point
# wraps the existing kglite Python API; Cypher execution still
# happens under the GIL release inside `cypher()`, so hot-path
# performance is unchanged.
[project.scripts]
kglite-mcp-server = "kglite.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/kkollsga/kglite"
Repository = "https://github.com/kkollsga/kglite"
Documentation = "https://kglite.readthedocs.io"
Changelog = "https://github.com/kkollsga/kglite/blob/main/CHANGELOG.md"
Issues = "https://github.com/kkollsga/kglite/issues"

[tool.maturin]
# extension-module must be added via maturin features (not Cargo.toml default)
# so `cargo test` can still link. abi3-py310 is in Cargo.toml since it affects
# symbol visibility even outside maturin builds.
features = ["python-extension"]
python-source = "."

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["kglite"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kglite"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m not benchmark')",
    "slow: slow tests taking >5s (deselect with '-m not slow')",
    "parity: cross-storage-mode oracle tests (memory vs mapped vs disk)",
    "stress: opt-in stress tests (30GB mapped, 10k-hop) — select with '-m stress'",
    "differential: cypher optimizer differential tests (optimized vs. naive)",
]
addopts = "-m 'not benchmark and not parity and not stress'"

[tool.mypy]
ignore_missing_imports = true
exclude = "kglite/blueprint/"

[[tool.mypy.overrides]]
module = ["kglite.blueprint.*"]
ignore_errors = true

[tool.coverage.run]
source = ["kglite"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover", "raise NotImplementedError"]
