[package]
name = "kglite-mcp-server"
version = "0.0.1"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "MCP server for kglite knowledge graphs — pure-Rust single-binary frontend for cypher_query / graph_overview / save_graph / read_code_source plus the generic source / GitHub surface from mcp-methods. No libpython link."

[[bin]]
name = "kglite-mcp-server"
path = "src/main.rs"

[dependencies]
# Generic MCP server framework (rmcp + manifest + source/github tools).
# Pinned to mcp-methods 0.3.27 (rev c01ec2d): same three-crate layout as
# 0.3.26 (pure-Rust `mcp-methods`, pyo3 bindings in `mcp-methods-py`,
# standalone binary in `mcp-server`) plus `Manifest::to_json()` added
# for the kglite 0.9.24 pyo3 wrapper. We still depend on the pure-Rust
# crate only — zero pyo3 in mcp-methods' tree, zero libpython link in
# our binary.
mcp-methods = { git = "https://github.com/kkollsga/mcp-methods.git", rev = "c01ec2df9f0599ada651455ccb0e0c17e95cc957", default-features = false, features = ["server"] }

# kglite as a pure-Rust crate dep (no PyO3 extension features). The
# `fastembed` feature pulls in the FastEmbedAdapter so the binary can
# support `text_score()` semantic search without a Python embedder.
# `default-features = false` opts out of abi3 — irrelevant here since
# we're not building a Python extension module.
kglite = { path = "../..", default-features = false, features = ["fastembed"] }

# rmcp re-export for the dynamic tool registration path.
rmcp = { version = "1.6", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime + JSON
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling + CLI
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV-over-HTTP server (extensions.csv_http_server). hyper 1.x with
# its server adapter from hyper-util — both are already in the
# resolved dep graph (rmcp uses hyper transitively), so this just
# surfaces them as direct deps for the csv_http module.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
